$Id: History,v 1.4 2002-04-26 13:52:10 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N01 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 26, 2002  Gabriele Cosmo  (exampleN01-V04-00-00)
- Removed deletion of volumes from destructor if ExN01DetectorConstruction.
  Now volumes are automatically destructed by kernel's stores.

June 17, 2000  John Allison  (exampleN01-V01-01-00)
- Updated exampleN01.out for geant4-01-01-ref-06.

16th April 1999 H.Kurashige
- modify ExN01PhysicsList::SetCuts

May 07, 98 M.Asai
- First commitment of all classes.

April 09, 98 G. Cosmo

- Created.