@@ -1,4 +1,4 @@
-$Id: History,v 1.4 2002-04-26 13:52:10 gcosmo Exp $
+$Id: History,v 1.5 2002-05-14 01:50:31 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 14, 2002  Makoto Asai (exampleN01-V04-00-01)
+- Remove UI command from ExN01PrimaryGeneratorAction and use direct method calls
 
 April 26, 2002  Gabriele Cosmo  (exampleN01-V04-00-00)
 - Removed deletion of volumes from destructor if ExN01DetectorConstruction.
